--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "marked": "^15.0.7",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
